Sync all content

--- a/content/resources/10-450s06-th.md
+++ b/content/resources/10-450s06-th.md
@@ -17,4 +17,8 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 10-450s06-th.jpg
 uid: 14264ae6-c5b5-3810-4a8f-c6b746bc5ed1
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
