--- a/content/resources/10-450s06.md
+++ b/content/resources/10-450s06.md
@@ -21,4 +21,8 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 10-450s06.jpg
 uid: 19d71d77-3488-c191-1731-86e90d7bc362
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
