--- a/content/resources/10-450s06-th.md
+++ b/content/resources/10-450s06-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: ''
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/10-450-process-dynamics-operations-and-control-spring-2006/14264ae6c5b538104a8fc6b746bc5ed1_10-450s06-th.jpg
+file: /media/courses/10-450-process-dynamics-operations-and-control-spring-2006/14264ae6c5b538104a8fc6b746bc5ed1_10-450s06-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A large tank must be filled with liquid from a supply line. One operator
@@ -13,6 +13,7 @@ image_metadata:
   credit: ''
   image-alt: A simple control system.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 10-450s06-th.jpg
