--- a/content/resources/10-450s06.md
+++ b/content/resources/10-450s06.md
@@ -5,7 +5,7 @@ description: A large tank must be filled with liquid from a supply line. One ope
   its level with a dipstick. When the tank is near full, the stick operator will instruct
   the other to start closing the valve. Overfilling can cause spills, but underfilling
   will cause later process problems. (Lesson 1 image by Dr. Barry Johnston.)
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/10-450-process-dynamics-operations-and-control-spring-2006/19d71d773488c191173186e90d7bc362_10-450s06.jpg
+file: /media/courses/10-450-process-dynamics-operations-and-control-spring-2006/19d71d773488c191173186e90d7bc362_10-450s06.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A large tank must be filled with liquid from a supply line. One operator
@@ -17,6 +17,7 @@ image_metadata:
   credit: ''
   image-alt: A simple control system.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 10-450s06.jpg
@@ -26,3 +27,4 @@ video_files:
 video_metadata:
   youtube_id: null
 ---
+A large tank must be filled with liquid from a supply line. One operator stands at ground level to operate the feed valve. Another stands on the tank, gauging its level with a dipstick. When the tank is near full, the stick operator will instruct the other to start closing the valve. Overfilling can cause spills, but underfilling will cause later process problems. (Lesson 1 image by Dr. Barry Johnston.)
